# project4

./: .gitignore  List.c  List.h  Makefile  README  command.c  command.h  configure.ac  data.h  example.c  expr.h  inputfile  main.c  main.h  rec17695  rec6447  sample1.c  sample1b.c  sample2.c  sample2b.c  sample3.c  sample4.c  sample5.c  sample6.c  symtab.c  symtab.h  trans.c  trans.h  ucc.l  ucc.l.h  ucc.y
cg/: Listcg.c  Listcg.h  cg.l  commandcg.h  datacg.h  exprcg.h  sample1.asm  sample1b.asm  sample2.asm  sample4.asm  sample5b.asm  symtabcg.c  transcg.c
src/: Makefile.am
src/back-end/: Listcg.c  Listcg.h  Makefile.am.x  Makefile.old  cg.l  cg.l.h  cg.y  commandcg.c  commandcg.h  datacg.h  debuglib.c  debuglib.h  main.c  main.h  memlib.c  (+9 more)
src/front-end/: List.c  List.h  Makefile.am  Makefile.old  command.h  main.c  main.h  symtab.c  symtab.h  trans.c  type.h  ucc.l  ucc.l.h  ucc.y  ucc.y.bak
src/interpreter/: Listint.c  Listint.h  Listint_main.c  Makefile  Makefile.am  Makefile.old  cc.help  commandint.c  commandint.h  dataint.h  debuglib.c  debuglib.h  exprint.h  interpreter.l  interpreter.l.h  interpreter.y  interpreter.y.h  main.c  main.h  memlib.c  memlib.h  memlib_main.c  reglib.c  reglib.h  symtabint.c  symtabint.h  transint.c  transint.h  typeint.h  useful.def  vm.c  vm.h  vm_main.c
src/interpreter/vm/: Makefile.old  allocate.c  allocate.h  call.c  call.h  change.c  change.h  enter.c  enter.h  fetch.c  fetch.h  initialize.c  initialize.h  instructionlib.h  jump.c  jump.h  memory.c  memory.h  memorylib.h  newmem_main.c  newmemory.c  newmemory.h  operator.c  operator.h  pop.c  pop.h  printf.c  printf.h  push.c  push.h  return.c  return.h  scanf.c  scanf.h  stack.c  stack.h  stacklib.h  status.c  status.h  store.c  (+5 more)
(+18 files in other folders)
