AC_INIT([ucc], [1.0], [info@laureltreecomputing.com])
#AC_CONFIG_SRCDIR([src/front-end src/back-end])
AC_CONFIG_AUX_DIR([scripts])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AM_MAINTAINER_MODE
AC_PROG_CC
AC_PROG_RANLIB
AM_PROG_AR
AC_PROG_LEX
AC_PROG_YACC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
